--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,3 @@
+// https://github.com/webpack-contrib/sass-loader/issues/40
+$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 @import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-
-
-body {
-  background-color: red;
-}
