Fix css styling for modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 // https://github.com/webpack-contrib/sass-loader/issues/40
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $border-radius-large: 0;
+$screen-sm: 769px;
 $btn-default-bg: fade-out(#fffafa, 0.3);
 $btn-default-border: transparent;
 $btn-primary-bg: fade-out(#E24E61, 0.10);
