--- a/src/components/SignUpModal/SignUpModal.scss
+++ b/src/components/SignUpModal/SignUpModal.scss
@@ -4,12 +4,20 @@ $modal-border-width: 1px;
 
 .modal-dialog {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
+  flex-direction: column;
+  display: flex;
+
 }
+
 .modal-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   height: 100%;
 }
+
 @media (min-width: 769px) {
   .modal-dialog {
     width: 768px;
@@ -20,6 +28,7 @@ $modal-border-width: 1px;
     height: 100%;
   }
 }
+
 
 .sign-up-modal {
   .modal-header {
@@ -54,14 +63,24 @@ $modal-border-width: 1px;
     }
   }
 
+
   .modal-footer {
     background-image: url('./roses-0.jpg');
     background-position: center center;
     background-size: 110%;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: $modal-height;
+    vertical-align:bottom;
+    flex-grow: 1;
   }
 
+  @media (min-width: 769px) {
+    .modal-footer {
+      background-image: url('./roses-0.jpg');
+      background-position: center center;
+      background-size: 110%;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: $modal-height;
+    }
+  }
 }
